# tenty-parser

./: .gitignore  LICENSE  README.md  deploy.ps1  deploy.sh  openapi-schema.json  output.toon  pyproject.toml  test.json
src/: __main__.py  cli.py
src/models/: structure.py
src/parsers/: json_parser.py  toon_parser.py  yaml_parser.py
src/tenty_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/transformers/: to_schema.py  to_structure.py  to_toon.py
